chore: update icon

--- a/components/icon/style/index.scss
+++ b/components/icon/style/index.scss
@@ -1,2 +1,2 @@
-@import '../../style/themes/default.scss';
-@import './component.scss';
+@import '../../style/core/index';
+@import 'zarm/lib/icon/style/index.scss';
