--- a/components/switch/style/component.scss
+++ b/components/switch/style/component.scss
@@ -1,23 +1,23 @@
 .ui-switch {
   position: relative;
   display: inline-block;
-  width: 44px;
-  height: 22px;
-  line-height: 20px;
+  width: 48px;
+  height: 20px;
+  line-height: 18px;
   vertical-align: middle;
-  border-radius: 20px;
-  border: 1px solid #ccc;
-  background-color: #ccc;
+  border-radius: 18px;
+  border: 1px solid #BCBCBC;
+  background-color: #BCBCBC;
   cursor: pointer;
   transition: left .3s cubic-bezier(.78, .14, .15, .86);
   user-select: none;
 
   &:after {
     position: absolute;
-    width: 18px;
-    height: 18px;
+    width: 14px;
+    height: 14px;
     left: 2px;
-    top: 1px;
+    top: 2px;
     border-radius: 100%;
     background-color: #fff;
     content: " ";
@@ -30,7 +30,7 @@
     background-color: $base-theme-info;
 
     &:after {
-      left: 22px;
+      left: 28px;
     }
 
     .ui-switch-inner {
@@ -40,28 +40,32 @@
 
   &.disabled {
     cursor: not-allowed;
-    opacity: 0.5;
-
+    border: 1px solid #dedede;
+    background-color: #dedede;
     &:after {
       cursor: not-allowed;
+    }
+    &.checked {
+      border: 1px solid $base-theme-info-disabled;
+      background: $base-theme-info-disabled;
     }
   }
 
   &.size-sm {
-    height: 14px;
-    line-height: 12px;
+    height: 11px;
+    line-height: 8px;
     width: 28px;
 
     &:after {
-      width: 12px;
-      height: 12px;
+      width: 8px;
+      height: 8px;
       top: 0;
-      left: 0;
+      left: 1;
     }
 
     &.checked {
       &:after {
-        left: 14px;
+        left: 16px;
       }
 
       .ui-switch-inner {
