chore: update switch

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -25,6 +25,7 @@
   // 背景色
   --background-active: #e6e6e6;
   --background-disabled: #bcbcbc;
+  --theme-primary-disabled: #7fddb7;
 
   // 边框色
   --border-color: #e6e6e6;
