--- a/components/style/components.scss
+++ b/components/style/components.scss
@@ -7,6 +7,7 @@
 @import '../confirm/style';
 @import '../date-picker/style';
 @import '../dropdown/style';
+@import '../drawer/style';
 @import '../form/style';
 @import '../grid/style';
 @import '../icon/style';
