--- a/components/style/index.scss
+++ b/components/style/index.scss
@@ -1,6 +1,7 @@
 @import "./core/index";
 @import "./themes/default";
 @import "./animations/index";
+@import '~zarm/lib/style/index.css';
 
 *,
 *:before,
