--- a/components/drawer/style/component.scss
+++ b/components/drawer/style/component.scss
@@ -1,13 +1,15 @@
-.za-drawer-box {
+@import '../../style/core/mixins/index';
+
+.zw-drawer {
   z-index: 1100;
   position: relative;
 
-  .za-drawer-cell-box {
+  .zw-drawer__cell-box {
     width: 100%;
     height: 100%;
     background-color: #fff;
 
-    .za-drawer-cell-closebtn {
+    .zw-drawer__cell__closebtn {
       width: 33px;
       height: 52px;
       position: absolute;
@@ -29,14 +31,14 @@
       }
     }
 
-    &.za-drawer-cell-box-right,
-    &.za-drawer-cell-box-left {
+    &.zw-drawer__cell-box__right,
+    &.zw-drawer__cell-box__left {
       padding-left: 80px;
       padding-right: 80px;
       padding-top: 80px;
 
-      .za-drawer-cell {
-        .za-drawer-cell-title {
+      .zw-drawer__cell {
+        .zw-drawer__cell__title {
           font-size: 22px;
           width: 100%;
           font-weight: 500;
@@ -49,10 +51,10 @@
       }
     }
 
-    &.za-drawer-cell-box-top,
-    &.za-drawer-cell-box-bottom {
-      .za-drawer-cell {
-        .za-drawer-cell-title {
+    &.zw-drawer__cell-box__top,
+    &.zw-drawer__cell-box__bottom {
+      .zw-drawer__cell {
+        .zw-drawer__cell__title {
           position: relative;
           padding: 16px 24px;
           background: #fff;
@@ -68,7 +70,7 @@
           white-space: nowrap;
         }
 
-        .za-drawer-cell-body {
+        .zw-drawer__cell__body {
           padding: 24px;
           font-size: 14px;
           line-height: 1.5;
@@ -77,32 +79,32 @@
       }
     }
 
-    &.za-drawer-cell-box-right {
-      .za-drawer-cell-closebtn {
+    &.zw-drawer__cell-box__right {
+      .zw-drawer__cell__closebtn {
         left: -33px;
         top: 0;
       }
     }
 
-    &.za-drawer-cell-box-left {
-      .za-drawer-cell-closebtn {
-        rotate: 180deg;
+    &.zw-drawer__cell-box__left {
+      .zw-drawer__cell__closebtn {
+        transform: rotate(180deg);
         right: -32px;
         top: -4px;
       }
     }
 
-    &.za-drawer-cell-box-top {
-      .za-drawer-cell-closebtn {
-        rotate: 270deg;
+    &.zw-drawer__cell-box__top {
+      .zw-drawer__cell__closebtn {
+        transform: rotate(270deg);
         left: 10px;
         bottom: -42px;
       }
     }
 
-    &.za-drawer-cell-box-bottom {
-      .za-drawer-cell-closebtn {
-        rotate: 90deg;
+    &.zw-drawer__cell-box__bottom {
+      .zw-drawer__cell__closebtn {
+        transform: rotate(90deg);
         left: 6px;
         top: -42px;
       }
