chore: update mixin in tag

--- a/components/tag/style/index.scss
+++ b/components/tag/style/index.scss
@@ -5,7 +5,7 @@
   border-color: rgba($color, 0.3);
   color: rgba($color, 1);
 
-  &.zw-tag--unborder {
+  @include m(unborder) {
     color: #fff;
     background-color: rgba($color, 1);
     border: hidden;
