--- a/components/checkbox/style/index.scss
+++ b/components/checkbox/style/index.scss
@@ -1,8 +1,8 @@
 @import "../../style/themes/default";
 @import "../../style/core/mixins/index";
-
 @include b(checkbox-group) {
   display: inline-block;
+
   label {
     margin-right: 16px;
   }
@@ -14,6 +14,7 @@
     border-color: #d9d9d9;
     background-color: #f3f3f3;
     cursor: not-allowed;
+
     &:after {
       border-color: #ccc;
     }
@@ -24,6 +25,7 @@
   @include b(checkbox__inner) {
     border-color: var(--theme-primary);
     background-color: var(--theme-primary);
+
     &:after {
       transform: rotate(45deg) scale(1);
       transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
@@ -36,11 +38,12 @@
   @include b(checkbox__inner) {
     border-color: #bcbcbc;
     background-color: var(--checkbox-color-white);
+
     &:after {
       transform: rotate(90deg) translate(2px, 1px);
       width: 6px;
       height: 6px;
-      border: 0px;
+      border: none;
       background-color: var(--theme-primary);
     }
   }
@@ -84,8 +87,8 @@
     border: 1px solid rgba(188, 188, 188, 1);
     border-radius: 2px;
     background-color: #fff;
-    transition: border-color 0.1s cubic-bezier(0.71, -0.46, 0.29, 1.46),
-      background-color 0.1s cubic-bezier(0.71, -0.46, 0.29, 1.46);
+    transition: border-color 0.1s cubic-bezier(0.71, -0.46, 0.29, 1.46), background-color 0.1s cubic-bezier(0.71, -0.46, 0.29, 1.46);
+
     &:after {
       transform: rotate(45deg) scale(0);
       position: absolute;
