--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -180,5 +180,6 @@
   --icon-theme-default: var(--color-text);
 
   // Checkbox
-  --checkbox-color-white: var(--color-white);
+  --checkbox-inner-w: 14px;
+  --checkbox-inner-h: 14px;
 }
