--- a/site/styles/pages/radio.scss
+++ b/site/styles/pages/radio.scss
@@ -1,9 +1,16 @@
-.za-row {
-  .zw-radio__wrapper {
-    margin-right: 31px;
+.radio-page {
+  .za-row {
+    .zw-radio__wrapper {
+      margin-right: 31px;
+    }
+
+    .content {
+      margin-left: 5px;
+    }
   }
 
-  .content {
-    margin-left: 5px;
+  .r-con .zw-radio-group {
+    margin-right: 15px;
+    margin-bottom: 15px;
   }
 }
