--- a/components/style/core/mixins/bem.scss
+++ b/components/style/core/mixins/bem.scss
@@ -4,6 +4,7 @@ $--namespace: 'zw';
 $--block-separator: '-';
 $--element-separator: '__';
 $--modifier-separator: '--';
+$--keyframes-separator: '_';
 
 // 是否包含Modifier
 @function containsModifier($selector) {
